adicionando função de contagem de alertas

--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -36,7 +36,7 @@
     </div>
     <header>
       <nav>
-        <ul>
+        <ul id="ul_nav">
           <li>
             <a href="/../dashboard/geral/dash-geral.html">
               <i class="ph ph-house"></i>
