--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -113,7 +113,7 @@
             <h3>
               Níveis de umidade registrados no armazém nas últimas 6 horas
             </h3>
-            <canvas id="chart-umdd"></canvas>
+            <canvas id="chartUmd"></canvas>
           </div>
         </div>
       </div>
