gráficos da dashboard finalizados

--- a/public/dashboard/armazem/dash-armazem.html
+++ b/public/dashboard/armazem/dash-armazem.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style-dashboard.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/../../script/script.js"></script>
-    <script src="../script/dashboardArmazem.js"></script>
+    <script src="/../../script/script.js" defer></script>
+    <script src="../script/dashboardArmazem.js" defer></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
     <title>Dashboard - Geral</title>
@@ -66,7 +66,7 @@
             <div class="inner-content">
                 <div class="container">
                     <h3>Temperaturas registradas no armazém nas últimas 6 horas</h3>
-                    <canvas id="chart-temp"></canvas>
+                    <canvas id="chartTemp"></canvas>
                 </div>
                 <div class="container">
                     <h3>Níveis de umidade registrados no armazém nas últimas 6 horas</h3>
