implemetando geração de alertas pelos gráficos

--- a/public/dashboard/armazem/dash-armazem.html
+++ b/public/dashboard/armazem/dash-armazem.html
@@ -15,6 +15,7 @@
 </head>
 
 <body onload="puxarDados()">
+    <div id="alerts_container"></div>
     <div class="top-line">
         <div class="empresa">
             <h1 class="empresa-nome"><span id="nomeEmp"></span> - Geral</h1>
@@ -48,17 +49,17 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="/../../img/icons/configurações.svg" alt="">
+                        <i class="ph ph-gear-six"></i>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="/../../img/icons/ajuda.svg" alt="">
+                        <i class="ph ph-question"></i>
                     </a>
                 </li>
                 <li>
                     <a href="/../../index.html" onclick="limparSessao()">
-                        <img src="/../../img/icons/logout.svg" alt="">
+                        <i class="ph ph-sign-out"></i>
                     </a>
             </ul>
         </nav>
