atualizando script do gráfico line8

--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style/style-dashboard.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/../../script/script.js" defer></script>
-    <script src="../script/dashboards.js" type="module" defer></script>
+    <script src="../script/dashboards.js" defer></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
     <title>Dashboard</title>
@@ -71,8 +71,7 @@
         <div class="inner-content">
           <div class="container">
             <h3>
-              Quantidade de armazéns com alertas acima do limite aceitável nas
-              últimas 8 semanas
+              Quantidade total de alertas emitidos nos últimos meses.
             </h3>
             <canvas id="chart-arm"></canvas>
           </div>
