--- a/public/dashboard/geral/cadastroArmazem.html
+++ b/public/dashboard/geral/cadastroArmazem.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style/style-dashboard.css" />
     <link rel="stylesheet" href="../style/cadastroUser.css">
     <script src="../../script/script.js"></script>
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <title>Cadastro Armazém</title>
 </head>
 <body> 
     <!-- <div class="tudao"> -->
-        <div class="top-line">
+        <!-- <div class="top-line"> -->
             <div class="empresa">
                 <h1 class="empresa-nome">
                     <span id="nomeEmp"></span>
@@ -20,64 +22,67 @@
             <span id="span_data"></span>
         </div>
         <header>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="../geral/dash-geral.html">
-                            <img src="../../img/icons/home.svg" alt="">
-                        Home                        
-                    </a>
-                    </li>
-                </ul>
-                <!-- divisão da nav -->
-                <ul>
-                    <li>
-                        <a href="">
-                            <img src="../../img/icons/configurações.svg" alt="">
-                            Settings
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://latech-help.atlassian.net/servicedesk/customer/portals" target="_blank">
-                            <img src="../../img/icons/ajuda.svg" alt="">
-                            Help
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../../login.html" onclick="limparSessao()">
-                            <img src="../../img/icons/logout.svg" alt="">
-                            Logout
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </HEADER>
+          <nav>
+            <ul id="ul_nav">
+              <li>
+                <a href="/../dashboard/geral/dash-geral.html">
+                  <i class="ph ph-house"></i>
+                </a>
+              </li>
+              <li>
+                <i class="ph ph-bell"></i>
+              </li> 
+              <div class="notification-container">
+              </div>
+            </ul>
+            <!-- divisão da nav -->
+            <ul>
+              <li>
+                <a href="">
+                  <i class="ph ph-gear-six"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://latech-help.atlassian.net/servicedesk/customer/portals" target="_blank">
+                  <i class="ph ph-question"></i>
+                </a>
+              </li>
+              <li>
+                <a href="/../../login.html" onclick="limparSessao()">
+                  <i class="ph ph-sign-out"></i>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </header>
         
         <div class="caixa-grande">
             
             <div class="container-cadastro">
                 <div class="caixa-cadastro">
+                  <div class="cadastro-titulo">
                     <h2>Cadastro de Armazéns</h2>
-                    <label for="">Cadastre seu armazém para começar a ter controle de sua temperatura e umidade na palma de sua mão</label>                  
+                  </div>
+                    <label for="">Cadastre seu armazém para começar a ter controle de sua temperatura e umidade remotamente.</label>                  
                     <div class="alerta-erro">
                         <div class="card-erro" id="cardErro">
                             <span id="mensagem_erro"></span>
                         </div>
                     </div>
-                    <label for="input_identificacao">Identificação</label>
+                    <label for="input_identificacao">Identificação:</label>
                     <input id="input_identificacao">
-                    <label for="input_rua">Logradouro</label>
+                    <label for="input_rua">Logradouro:</label>
                     <input id="input_rua">
                     <div class="flex">
-                    <label for="input_bairro">Bairro
+                    <label for="input_bairro">Bairro:
                     <input id="input_bairro"></label>
-                    <label for="input_numero">Número
+                    <label for="input_numero">Número:
                     <input id="input_numero"></label>
                   </div>
                   <div class="flex">
-                    <label for="input_complemento">Complemento
+                    <label for="input_complemento">Complemento:
                     <input id="input_complemento"></label>
-                    <label for="input_cep">CEP
+                    <label for="input_cep">CEP:
                     <input id="input_cep"></label>
               </div>
                     <button onclick="armazem()">Cadastrar novo Armazém</button>
@@ -89,7 +94,7 @@
             <div id="div_erros_login"></div>
         </div>
     </div>
-
+    <img src="../../img/background/milkwave.png" class="header-background" alt="">
 </body>
 </html>
 
