--- a/public/dashboard/geral/cadastroUsuario.html
+++ b/public/dashboard/geral/cadastroUsuario.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style/style-dashboard.css" />
     <link rel="stylesheet" href="../style/cadastroUser.css">
     <script src="../../script/script.js"></script>
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <title>Cadastro Usuário</title>
 </head> 
 <body>
-    <div class="tudao">
-        <div class="top-line">
+    <!-- <div class="tudao"> -->
+        <!-- <div class="top-line"> -->
             <div class="empresa">
                 <h1 class="empresa-nome">
                     <span id="nomeEmp"></span>
@@ -21,51 +23,60 @@
         </div>
         <header>
             <nav>
-                <ul>
-                    <li>
-                        <a href="/../dashboard/geral/dash-geral.html">
-                            <img src="../../img/icons/home.svg" alt="">
-                        </a>
-                    </li>
+                <ul id="ul_nav">
+                  <li>
+                    <a href="/../dashboard/geral/dash-geral.html">
+                      <i class="ph ph-house"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <i class="ph ph-bell"></i>
+                  </li> 
+                  <div class="notification-container">
+                  </div>
                 </ul>
                 <!-- divisão da nav -->
                 <ul>
-                    <li>
-                        <a href="">
-                            <img src="../../img/icons/configurações.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="../../img/icons/ajuda.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../../login.html" onclick="limparSessao()">
-                            <img src="../../img/icons/logout.svg" alt="">
-                        </a>
-                    </li>
+                  <li>
+                    <a href="">
+                      <i class="ph ph-gear-six"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://latech-help.atlassian.net/servicedesk/customer/portals" target="_blank">
+                      <i class="ph ph-question"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/../../login.html" onclick="limparSessao()">
+                      <i class="ph ph-sign-out"></i>
+                    </a>
+                  </li>
                 </ul>
-            </nav>
-        </HEADER>
+              </nav>
+            </header>
         
         <div class="caixa-grande">
 
             <div class="container-cadastro">
                 <div class="caixa-cadastro">
+                  <div class="cadastro-titulo">
                     <h2>Cadastro de Usuários</h2>
+                    </div>
+                    <label for="">Cadastre os seus funcionários ou dependentes para múltiplos acessos de monitoramento.</label>                  
                     <div class="alerta-erro">
                         <div class="card-erro" id="cardErro">
                             <span id="mensagem_erro"></span>
                         </div>
                     </div>
-                    <label for="input_email">Email</label>
-                    <input id="input_email">
-                    <label for="input_senha">Senha</label>
-                    <input type="password" id="input_senha">
-                    <label for="input_confiSenha">Confirmar Senha</label>
-                    <input type="password" id="input_confiSenha">
-                    <button onclick="usuario()">Cadastrar</button>
+                    <label for="input_email">Email:</label>
+                    <input id="input_email " placeholder="func.org@mail.com">
+                    <label for="input_senha">Senha:</label>
+                    <input type="password" id="input_senha" placeholder="*********">
+                    <label for="input_confiSenha">Confirmar Senha:</label>
+                    <input type="password" id="input_confiSenha" placeholder="*********">
+                    <button onclick="usuario()">Cadastrar</button>  <br>
+                    <a class="redirecionar" href="dash-geral.html">Ir direto para a Dashboard</a>
                 </div>
             </div>
 
@@ -74,6 +85,6 @@
             <div id="div_erros_login"></div>
         </div>
     </div>
-
+    <img src="../../img/background/milkwave.png" class="header-background" alt="">  
 </body>
 </html>
