indicadores puxando dados do banco de dados

--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -72,7 +72,7 @@
       <div class="inner-content">
         <div class="container">
           <h3>
-            Quantidade total de alertas emitidos nos últimos meses.
+            Quantidade total de alertas emitidos em todos os armazens nos últimos meses.
           </h3>
           <canvas id="chart-arm"></canvas>
         </div>
@@ -111,7 +111,7 @@
         </div>
         <div class="container">
           <h3>
-            Níveis de umidade registrados no armazém nas últimas 6 horas
+            Quantidade de alertas emitidos por sensor no último mês.
           </h3>
           <canvas id="chartUmd"></canvas>
         </div>
