--- a/public/dashboard/armazem/dash-armazem.html
+++ b/public/dashboard/armazem/dash-armazem.html
@@ -69,22 +69,27 @@
             <div class="inner-content">
                 <div class="container cards">
                     <div class="container info">
-                        <div class="lista-armazens">
-                            <h4>Lista de armazens</h4>
+                        <div class="info">
+                            <h4>Sensores instalados</h4>
                             <span class="valor">
-
+                                <i class="ph ph-cell-signal-full"></i>
+                                <span id="qtd_sensor"></span>
                             </span>
                         </div>
-                        <div class="info" onclick="trocarPaginaDash()">
-                            <h4>Armazém com mais alertas & Alertas emitidos no mês</h4>
+                        <div class="info">
+                            <h4>Último alerta emitido</h4>
                             <span class="valor">
-                                <img src="../../img/icons/aviso.png" alt="">
-                                Armazem 1
-                                <img src="../../img/icons/calendario.png" alt="">
-                                15
+                                <i class="ph ph-warning"></i>
+                                <span id="ultimo_alerta"></span>
                             </span>
                         </div>
-
+                        <div class="info">
+                            <h4>Alertas emitidos no mês</h4>
+                            <span class="valor">
+                                <i class="ph ph-calendar"></i>
+                                <span id="alerta_mes"></span>
+                            </span>
+                        </div>
                     </div>
                     <div class="card">
                         <h3>Percentual de alertas de temperatura e umidade emitidos nas últimas 8 semanas</h3>
