--- a/public/dashboard/armazem/dash-armazem.html
+++ b/public/dashboard/armazem/dash-armazem.html
@@ -60,10 +60,12 @@
                 <div class="container">
                     <h3>Temperaturas registradas no armazém nas últimas 6 horas</h3>
                     <canvas id="chartTemp"></canvas>
+                    <h3 id="temp_msg" class="msg-chart"></h3>
                 </div>
                 <div class="container">
                     <h3>Níveis de umidade registrados no armazém nas últimas 6 horas</h3>
                     <canvas id="chartUmd"></canvas>
+                    <h3 id="umid_msg" class="msg-chart"></h3>
                 </div>
             </div>
             <div class="inner-content">
