corrigindo cadastro de usuários e de armazens

--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -52,10 +52,16 @@
       <!-- divisão da nav -->
       <ul>
         <li>
-          <a href="">
-            <i class="ph ph-gear-six"></i>
-          </a>
-        </li>
+          <i class="ph ph-gear-six" onclick="showConfig()"></i>
+      </li>
+      <div id="config_container">
+          <a href="../geral/cadastroUsuario.html">Cadastrar novo usuário</a>
+          <a href="../geral/cadastroArmazem.html">Cadastrar novo armazém</a>
+      </div>
+        <div id="config_container">
+          <a href="../geral/cadastroUsuario.html">Cadastrar novo usuário</a>
+          <a href="../geral/cadastroArmazem.html">Cadastrar novo armazém</a>
+        </div>
         <li>
           <a href="https://latech-help.atlassian.net/servicedesk/customer/portals" target="_blank">
             <i class="ph ph-question"></i>
