--- a/public/dashboard/armazem/dash-armazem.html
+++ b/public/dashboard/armazem/dash-armazem.html
@@ -40,12 +40,14 @@
             <!-- divisão da nav -->
             <ul>
                 <li>
-                    <a href="">
-                        <i class="ph ph-gear-six"></i>
-                    </a>
+                    <i class="ph ph-gear-six" onclick="showConfig()"></i>
                 </li>
+                <div id="config_container">
+                    <a href="../geral/cadastroUsuario.html">Cadastrar novo usuário</a>
+                    <a href="../geral/cadastroArmazem.html">Cadastrar novo armazém</a>
+                </div>
                 <li>
-                    <a href="">
+                    <a href="https://latech-help.atlassian.net/servicedesk/customer/portals">
                         <i class="ph ph-question"></i>
                     </a>
                 </li>
@@ -73,21 +75,21 @@
                     <div class="container info">
                         <div class="info">
                             <h4>Sensores instalados</h4>
-                            <span class="valor">
+                            <span class="valor indicador">
                                 <i class="ph ph-cell-signal-full"></i>
                                 <span id="qtd_sensor"></span>
                             </span>
                         </div>
                         <div class="info">
                             <h4>Último alerta emitido</h4>
-                            <span class="valor">
+                            <span class="valor indicador">
                                 <i class="ph ph-warning"></i>
                                 <span id="ultimo_alerta"></span>
                             </span>
                         </div>
                         <div class="info">
                             <h4>Alertas emitidos no mês</h4>
-                            <span class="valor">
+                            <span class="valor indicador">
                                 <i class="ph ph-calendar"></i>
                                 <span id="alerta_mes"></span>
                             </span>
